# mipt-nlp-rag

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
notebooks/: finrad_dataset.ipynb
src/agent/: graph.py  tools.py
src/common/: log.py  settings.py  vdb.py
src/tasks/: loader.py
