[project]
name = "hw01"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "openai>=2.26.0",
    "pydantic-settings>=2.13.1",
    "pymilvus>=2.6.9",
    "langgraph>=0.4.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph-cli[inmem]>=0.2.0",
]

[dependency-groups]
dev = [
    "datasets>=3.0.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
]
